--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Nathan Jessen</h1>
-        <p class="header">Portfolio coming soon</p>
+        <p class="header">Portfolio</p>
 
         <ul>
           <li><a class="buttons github" href="https://github.com/nathanjessen">GitHub Profile</a></li>
@@ -25,9 +25,14 @@
 
       </header>
       <section>
-        <h3>Welcome to my portfolio.</h3>
-
-<p>I just set up this site so please give me a week to get some content out here.</p>
+        <h3>Recent Works</h3>
+	<ul>
+		<li><a href="http://nathanjessen.github.com/" title="Rosedale Development Association">Rosedale Development Association</a> - WordPress Twenty Twelve Child Theme developed at <a href="http://coders4charities.org/" title="Coders 4 Charities">Coders 4 Charities</a> 2013</li>
+		<li><a href="http://www.clearcurrentpro.com/" title="GE ClearCurrent Pro">GE ClearCurrent Pro</a> - VML Project, Built using Skeleton boilerplate</li>
+		<li><a href="http://www.bivipurefil.com/" title="BIVI Purefil">Boehringer Ingelheim Purefil<sup>TM</sup> Technology</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="http://www.epilepsyindogs.co.uk/" title="Epilepsy in Dogs">Epilepsy in Dogs</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="http://www.heartlandtrailways.com">Heartland Trailways</a> - WordPress</li>
+	</ul>
 
       </section>
       <footer>
