--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <section>
         <h3>Recent Works</h3>
 	<ul>
-		<li><a href="http://nathanjessen.github.com/" title="Rosedale Development Association">Rosedale Development Association</a> - WordPress Twenty Twelve Child Theme developed at <a href="http://coders4charities.org/" title="Coders 4 Charities">Coders 4 Charities</a> 2013</li>
-		<li><a href="http://www.clearcurrentpro.com/" title="GE ClearCurrent Pro">GE ClearCurrent Pro</a> - VML Project, Built using Skeleton boilerplate</li>
-		<li><a href="http://www.bivipurefil.com/" title="BIVI Purefil">Boehringer Ingelheim Purefil<sup>TM</sup> Technology</a> - VML Project, Adobe CQ5 CMS</li>
-		<li><a href="http://www.epilepsyindogs.co.uk/" title="Epilepsy in Dogs">Epilepsy in Dogs</a> - VML Project, Adobe CQ5 CMS</li>
-		<li><a href="http://www.heartlandtrailways.com">Heartland Trailways</a> - WordPress</li>
+		<li><a href="http://rosedale.org/" title="Rosedale Development Association" target="_blank">Rosedale Development Association</a> - WordPress Twenty Twelve Child Theme developed at <a href="http://coders4charities.org/" title="Coders 4 Charities">Coders 4 Charities</a> 2013</li>
+		<li><a href="http://www.clearcurrentpro.com/" title="GE ClearCurrent Pro" target="_blank">GE ClearCurrent Pro</a> - VML Project, Built using Skeleton boilerplate</li>
+		<li><a href="http://www.bivipurefil.com/" title="BIVI Purefil" target="_blank">Boehringer Ingelheim Purefil<sup>TM</sup> Technology</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="http://www.epilepsyindogs.co.uk/" title="Epilepsy in Dogs" target="_blank">Epilepsy in Dogs</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="http://www.heartlandtrailways.com" target="_blank">Heartland Trailways</a> - WordPress</li>
 	</ul>
 
       </section>
