--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul>
           <li><a class="buttons github" href="https://github.com/nathanjessen">GitHub Profile</a></li>
-          <li><a class="buttons" href="http://www.linkedin.com/in/njessen/">LinkedNn</a></li>
+          <li><a class="buttons" href="http://www.linkedin.com/in/njessen/">Linkedin</a></li>
         </ul>
 
       </header>
