--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 	</ul>
 
       </section>
+      <section>
+        <h3>Current Side Projects</h3>
+	<ul>
+		<li><a href="http://www.coppinc.com/" title="Care of Poor People, Inc." target="_blank">Care of Poor People</a> - Built a WordPress site. Developing a custom theme</li>
+		<li><a href="https://github.com/nathanjessen/Gumby2-WP" title="Gumby2-WP">Gumby2-WP</a> - A WordPress theme I just started which will combine the power of WordPress with the awesomeness of the Gumby Framework</li>
+	</ul>
+
+      </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
