--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 			</header>
 			
 			<section>
+				<h3>GitHub Contributions</h3>
+				<iframe src="http://song-of-github.herokuapp.com/?username={{name}}&embeddable" height="240" width="600"></iframe>
+			</section>
+			
+			<section>
 				<h3>Past Work</h3>
 				<ul>
 					<li><a href="http://rosedale.org/" title="Rosedale Development Association" target="_blank">Rosedale Development Association</a> - WordPress Twenty Twelve Child Theme developed at <a href="http://coders4charities.org/" title="Coders 4 Charities">Coders 4 Charities</a> 2013</li>
