experiment with liquid
sample output

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class="wrapper">
 			<header>
-				<h1 class="header">Nathan Jessen</h1>
+				<h1 class="header">{{author.name}}</h1>
 				<p class="header">Portfolio</p>
 
 				<ul>
