add projects to homepage

--- a/index.html
+++ b/index.html
@@ -4,3 +4,27 @@ title: Portfolio of Nathan Jessen
 base_url: "./"
 ---
 
+<section>
+	<h3>Past Work</h3>
+	<ul>
+		<li><a href="http://rosedale.org/" title="Rosedale Development Association" target="_blank">Rosedale Development Association</a> - WordPress Twenty Twelve Child Theme developed at <a href="http://coders4charities.org/" title="Coders 4 Charities">Coders 4 Charities</a> 2013</li>
+		<li><a href="http://www.duramunelepto.com/lepto_videos.html" title="Duramune Lepto - Lepto Videos" target="_blank">Duramune Lepto - Lepto Videos</a> - VML Project, Built an additional page to the existing site. Implemented Bootstrap modal and extended the functionality created with Backbone</a></li>
+		<li><a href="http://www.haveweseenyourcatlately.com/Home.html" title="Have We Seen Your Cat Lately" target="_blank">Have We Seen Your Cat Lately</a> - Adobe CQ5 updates. Also, rewrote the CSS/JS for increased maintainability and performance</a></li>
+		<li><a href="http://www.clearcurrentpro.com/" title="GE ClearCurrent Pro" target="_blank">GE ClearCurrent Pro</a> - VML Project, Built using Skeleton boilerplate</li>
+		<li><a href="http://www.bivipurefil.com/" title="BIVI Purefil" target="_blank">Boehringer Ingelheim Purefil<sup>TM</sup> Technology</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="http://www.epilepsyindogs.co.uk/" title="Epilepsy in Dogs" target="_blank">Epilepsy in Dogs</a> - VML Project, Adobe CQ5 CMS</li>
+		<li><a href="https://www.pioneermilitaryloans.com/pioneer-services" title="Pioneer Military Loans" target="_blank">Pioneer Military Loans</a> - VML Project, joined the project during testing phase. Responsible for fixing defects, refactoring css, and adding new styles and functionality to the site.</li>
+		<li><a href="http://www.heartlandtrailways.com" target="_blank">Heartland Trailways</a> - WordPress</li>
+		<li><a href="http://theory21.com/works" target="_blank">Old portfolio</a> - Some of my other work can be found on my old portfolio website. These projects will be moved over here soon.</li>
+	</ul>
+
+</section>
+
+<section>
+	<h3>Current Side Projects</h3>
+	<ul>
+		<li><a href="http://www.coppinc.com/" title="Care of Poor People, Inc." target="_blank">Care of Poor People, Inc.</a> - Migrated website to new host and built a WordPress website. Currently developing a custom theme and functionality to aid the organization.</li>
+		<li><a href="https://github.com/nathanjessen/Gumby2-WP" title="Gumby2-WP">Gumby2-WP</a> - A WordPress theme I just started which will combine the power of WordPress with the awesomeness of the Gumby Framework</li>
+	</ul>
+
+</section>
