test posts folder vs projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ base_url: "./"
 <section>
 	<h3>Past Work</h3>
 	<ul>
+		{% for post in site.posts limit: 20 %}
+		<li><a href="{{ post.url }}" title="{{ post.title }}" target="_blank">{{ post.title }}</a></li>
+		{% endfor %}
 		{% for project in site.projects limit: 20 %}
 		<li><a href="{{ project.url }}" title="{{ project.title }}" target="_blank">{{ project.title }}</a></li>
 		{% endfor %}
