--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ base_url: "./"
 <section>
 	<h3>Past Work</h3>
 	<ul>
+		{% assign blog_categories = site.categories['blog'] | filter_categories_by_primary_category %}
+		{% for category in blog_categories %}{% endfor %}
 		{% for post in site.posts limit: 20 %}
 		<li><a href="{{ post.url }}" title="{{ post.title }}" target="_blank">{{ post.title }}</a></li>
 		{% endfor %}
