--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ base_url: "./"
 	<h3>Past Work</h3>
 	<ul>
 		{% assign blog_categories = site.categories['blog'] | filter_categories_by_primary_category %}
-		{% for category in blog_categories %}{% endfor %}
+		{% for category in blog_categories %}<li>category.title</li>{% endfor %}
 		{% for post in site.posts limit: 20 %}
 		<li><a href="{{ post.url }}" title="{{ post.title }}" target="_blank">{{ post.title }}</a></li>
 		{% endfor %}
