--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ base_url: "./"
 	<ul>
 		{% assign blog_categories = site.categories['blog'] %}
 		{% for category in blog_categories limit: 20 %}
-		<li><a href="{{ category.url }}" title="{{ category.title }}" target="_blank">{{ category.title }}</a></li>
+		<li><a href="{{ category.url }}" title="{{ category.title }}">{{ category.title }}</a></li>
 		{% endfor %}
 		{% assign portfolio_categories = site.categories['portfolio'] %}
 		{% for category in portfolio_categories limit: 20 %}
-		<li><a href="{{ category.url }}" title="{{ category.title }}" target="_blank">{{ category.title }}</a></li>
+		<li><a href="{{ category.url }}" title="{{ category.title }}">{{ category.title }}</a></li>
 		{% endfor %}
 		<li><a href="http://www.duramunelepto.com/lepto_videos.html" title="Duramune Lepto - Lepto Videos" target="_blank">Duramune Lepto - Lepto Videos</a> - VML Project, Built an additional page to the existing site. Implemented Bootstrap modal and extended the functionality created with Backbone</a></li>
 		<li><a href="http://www.haveweseenyourcatlately.com/Home.html" title="Have We Seen Your Cat Lately" target="_blank">Have We Seen Your Cat Lately</a> - Adobe CQ5 updates. Also, rewrote the CSS/JS for increased maintainability and performance</a></li>
