Change markdown to html

--- a/404.html
+++ b/404.html
@@ -4,14 +4,12 @@ title: 404
 slug: 404
 ---
 
-## Not Found :(
-
-Sorry, but the page you were trying to view does not exist or has been relocated.
-
-It looks like this was the result of either:
-
-* a mistyped address
-* an out-of-date link
-* recent changes to static pages
-
-Try starting back at [the homepage](http://semanticss.com/).
+<h3>Not Found :(</h3>
+<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+<p>It looks like this was the result of either:</p>
+<ul>
+	<li>a mistyped address</li>
+	<li>an out-of-date link</li>
+	<li>recent changes to static pages</li>
+</ul>
+<p>Try starting back at <a href="http://semanticss.com/">the homepage</a>.</p>
