--- a/404.html
+++ b/404.html
@@ -1,15 +1,16 @@
----
-layout: default
-title: 404
-slug: 404
----
-
-<h3>Not Found :(</h3>
-<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-<p>It looks like this was the result of either:</p>
-<ul>
-	<li>a mistyped address</li>
-	<li>an out-of-date link</li>
-	<li>recent changes to static pages</li>
-</ul>
-<p>Try starting back at <a href="http://semanticss.com/">the homepage</a>.</p>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+	<h3>Not Found :(</h3>
+	<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+	<p>It looks like this was the result of either:</p>
+	<ul>
+		<li>a mistyped address</li>
+		<li>an out-of-date link</li>
+		<li>recent changes to static pages</li>
+	</ul>
+	<p>Try starting back at <a href="http://semanticss.com/">the homepage</a>.</p>
+</body>
+</html>
