Restructuring of entire site
Restructure to be cleaner and more robust.
Remove work posts
Add tags and category pages
Adjust permalink structure and add pagination
Move pages into a subfolder
Goal will be to convert site into a theme

--- a/404.html
+++ b/404.html
@@ -1,133 +1,13 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en">
-<!--<![endif]-->
-  <head>
-    <!-- Meta, title, CSS, favicons, etc. -->
-    <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><!-- Force Latest IE rendering engine -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>404 Page Not Found | Semanticss</title>
+---
+layout: default
+---
 
-	<!-- Bootstrap core CSS -->
-	<link href="/assets/css/bootstrap.css" rel="stylesheet">
-	<link href="/assets/css/custom.css" rel="stylesheet">
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	  <script src="/assets/js/html5shiv.js"></script>
-	  <script src="/assets/js/respond.min.js"></script>
-	<![endif]-->
-
-	<link href="http://feeds.feedburner.com/semanticss" rel="alternate" title="Semanticss - Nathan Jessen" type="application/atom+xml" />
-
-	<!-- Favicons -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/apple-touch-icon-144-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/apple-touch-icon-114-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" href="/assets/ico/apple-touch-icon-57-precomposed.png">
-	<link rel="shortcut icon" href="/assets/ico/favicon.png">
-
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-42437510-1', 'semanticss.com');
-		ga('send', 'pageview');
-	</script>
-
-
-    <!-- Place anything custom after this. -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <a class="sr-only" href="#content">Skip navigation</a>
-    <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
-	  <div class="container">
-	    <div class="navbar-header">
-	      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a href="/" class="navbar-brand">Semanticss</a>
-	    </div>
-	    <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-	      <ul class="nav navbar-nav">
-	        <li>
-	          <a href="/work/">Work</a>
-	        </li>
-	        <!-- <li>
-	          <a href="/blog/">Blog</a>
-	        </li>
-	        <li>
-	          <a href="/about/">About</a>
-	        </li>
-	        <li>
-	          <a href="/pens/">Pens</a>
-	        </li>
-	        <li>
-	          <a href="/talks/">Talks</a>
-	        </li>
-	        <li>
-	          <a href="/contact/">Contact</a>
-	        </li> -->
-	      </ul>
-	    </nav>
-	  </div>
-	</header>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="bs-sidebar hidden-print" role="complementary">
-            <ul class="nav bs-sidenav">
-				<li><a class="" href="//github.com/nathanjessen" target="_blank">GitHub</a></li>
-				<li><a class="" href="//www.linkedin.com/in/njessen/" target="_blank">Linkedin</a></li>
-				<li><a class="" href="//plus.google.com/108819920657113454025/posts" target="_blank">Google Plus</a></li>
-				<li><a class="" href="mailto:nathan.jessen@gmail.com">Email</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-9" role="main">
-			<h3>Not Found :(</h3>
-			<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-			<p>It looks like this was the result of either:</p>
-			<ul>
-				<li>a mistyped address</li>
-				<li>an out-of-date link</li>
-				<li>recent changes to static pages</li>
-			</ul>
-			<p>Try starting back at <a href="http://semanticss.com/">the homepage</a>.</p>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- Footer
-    ================================================== -->
-    <footer class="bs-footer" role="contentinfo">
-      <div class="container">
-        <p>Hosted on <a href="https://pages.github.com">GitHub Pages</a></p>
-      </div>
-    </footer>
-
-    <!-- JS and analytics only. -->
-    <!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="/assets/js/jquery.js"></script>
-	<script src="/assets/js/bootstrap.min.js"></script>
-  </body>
-</html>
+<h3>Not Found :(</h3>
+<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+<p>It looks like this was the result of either:</p>
+<ul>
+	<li>a mistyped address</li>
+	<li>an out-of-date link</li>
+	<li>recent changes to static pages</li>
+</ul>
+<p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
