--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Semanticss
 slug: home
-base_url: "./"
 ---
 
-{% include recent-articles.html %}
+
+Home to the portfolio of Nathan Jessen. I'm in the process of updating this site so please bare with me as I get things in order.
