Site name change, combine css files, edit layout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Semanticss
+title: Nathan Jessen
 slug: home
 ---
 
 
-Home to the portfolio of Nathan Jessen. I'm in the process of updating this site so please bare with me as I get things in order.
