--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -13,7 +13,7 @@ permalink: /talks/
 		<section>
 			<h4>Sass Series</h4>
 			<ol>
-				<li><a href="{{ base_url }}slides/sass-best-practices-tools-resources/">Sass Best Practices, Tools, and Resources</a></li>
+				<li><a href="{{ BASE_PATH }}/slides/sass-best-practices-tools-resources/">Sass Best Practices, Tools, and Resources</a></li>
 				<li>CSS Methodologies</li>
 				<li>Sass Intermediate Concepts</li>
 				<li>Sass Intermediate Concepts Part 2</li>
