Change extensions from md to html
Fix margin issue by changing file extension
Wrap content in slab and wrap
Remove pens

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,8 +5,7 @@ slug: talks
 permalink: /talks/
 ---
 
-
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>{{ page.title }}</h3>
 
