--- a/_pages/freelance.html
+++ b/_pages/freelance.html
@@ -5,8 +5,7 @@ slug: freelance
 permalink: /freelance/
 ---
 
-
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>Rosedale Development Association</h3>
 		<p>10/07/2013</p>
@@ -15,7 +14,7 @@ permalink: /freelance/
 	</div>
 </section>
 
-<section class="slab slab--alternate">
+<section class="slab">
 	<div class="wrap">
 		<h3>Heartland Trailways</h3>
 		<p>10/07/2013</p>
