--- a/_pages/vml.html
+++ b/_pages/vml.html
@@ -5,7 +5,7 @@ slug: vml
 permalink: /vml/
 ---
 
-<!-- <section class="slab slab--alternate">
+<!-- <section class="slab">
 	<div class="wrap">
 		<h3>BIVI UltraDuramune</h3>
 		<p>03/01/2014</p>
@@ -14,7 +14,7 @@ permalink: /vml/
 	</div>
 </section> -->
 
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>Dollars and Sense</h3>
 		<p>01/09/2014</p>
@@ -23,7 +23,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab slab--alternate">
+<section class="slab">
 	<div class="wrap">
 		<h3>GCR/TDS Tires &amp; Service</h3>
 		<p>01/09/2014</p>
@@ -32,7 +32,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>Duramune Lepto - Lepto Videos</h3>
 		<p>10/07/2013</p>
@@ -41,7 +41,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab slab--alternate">
+<section class="slab">
 	<div class="wrap">
 		<h3>Have We Seen Your Cat Lately?</h3>
 		<p>10/07/2013</p>
@@ -50,7 +50,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>eVent Fabrics</h3>
 		<p>N/A</p>
@@ -59,7 +59,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab slab--alternate">
+<section class="slab">
 	<div class="wrap">
 		<h3>Pioneer Military Loans</h3>
 		<p>10/07/2013</p>
@@ -68,7 +68,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>GE ClearCurrent Pro</h3>
 		<p>10/07/2013</p>
@@ -77,7 +77,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab slab--alternate">
+<section class="slab">
 	<div class="wrap">
 		<h3>Epilepsy in Dogs</h3>
 		<p>10/07/2013</p>
@@ -86,7 +86,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab">
+<section class="slab--white">
 	<div class="wrap">
 		<h3>Boehringer Ingelheim Purefil<sup>TM</sup> Technology</h3>
 		<p>10/07/2013</p>
