Fix slab modifiers and add base class to slabs in html

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,7 +5,7 @@ slug: about
 permalink: /about/
 ---
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>{{ page.title }}</h3>
 		<p>I am a 26 year old Interactive Front-end Developer from Blair, NE but currently living in Kansas City, MO. I work for an amazing company, <a href="//www.vml.com/">VML</a>.</p>
@@ -19,7 +19,7 @@ permalink: /about/
 	</div>
 </section>
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>What I do not do</h3>
 		<p><b>Countless revisions</b>. Take time to develop your concept and time frame. When I start the work, you can expect a quick turn around. Once I have completed the work, I will allow for two rounds of revisions to ensure we are both happy with the final product. Anything beyond two revisions is indicative of something that wasn't addressed before the concept handoff. This will also avoid high invoices and bad moods on both sides.</p>
