--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,7 +5,7 @@ slug: contact
 permalink: /contact/
 ---
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>{{ page.title }}</h3>
 		<p>Thank you for your interest. Reach out to me through one of the links below.</p>
