--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -4,7 +4,7 @@ title: "Resumé / CV"
 permalink: /cv/
 ---
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>Expertise</h3>
 		<ul>
