--- a/_pages/freelance.html
+++ b/_pages/freelance.html
@@ -5,7 +5,7 @@ slug: freelance
 permalink: /freelance/
 ---
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>Rosedale Development Association</h3>
 		<p>10/07/2013</p>
