--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,7 +5,7 @@ slug: talks
 permalink: /talks/
 ---
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>{{ page.title }}</h3>
 
