--- a/_pages/vml.html
+++ b/_pages/vml.html
@@ -14,7 +14,7 @@ permalink: /vml/
 	</div>
 </section> -->
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>Dollars and Sense</h3>
 		<p>01/09/2014</p>
@@ -32,7 +32,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>Duramune Lepto - Lepto Videos</h3>
 		<p>10/07/2013</p>
@@ -50,7 +50,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>eVent Fabrics</h3>
 		<p>N/A</p>
@@ -68,7 +68,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>GE ClearCurrent Pro</h3>
 		<p>10/07/2013</p>
@@ -86,7 +86,7 @@ permalink: /vml/
 	</div>
 </section>
 
-<section class="slab--white">
+<section class="slab slab--white">
 	<div class="wrap">
 		<h3>Boehringer Ingelheim Purefil<sup>TM</sup> Technology</h3>
 		<p>10/07/2013</p>
