Update to slides and change slides theme

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -12,10 +12,9 @@ permalink: /talks/
 		<section>
 			<h4>Sass Series</h4>
 			<ol>
-				<li><a href="{{ BASE_PATH }}/slides/sass-best-practices-tools-resources/">Sass Best Practices, Tools, and Resources</a></li>
+				<li><a href="{{ BASE_PATH }}/slides/sass-best-practices-techniques-tools-resources/">Best Practices, Techniques, Tools, and Resources</a></li>
 				<li>CSS Methodologies</li>
 				<li>Sass Intermediate Concepts</li>
-				<li>Sass Intermediate Concepts Part 2</li>
 			</ol>
 		</section>
 	</div>
