--- a/404.html
+++ b/404.html
@@ -2,12 +2,16 @@
 layout: default
 ---
 
-<h3>Not Found :(</h3>
-<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-<p>It looks like this was the result of either:</p>
-<ul>
-	<li>a mistyped address</li>
-	<li>an out-of-date link</li>
-	<li>recent changes to static pages</li>
-</ul>
-<p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
+<section class="wrap">
+  <div class="single-content">
+	<h3>Not Found :(</h3>
+	<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+	<p>It looks like this was the result of either:</p>
+	<ul>
+		<li>a mistyped address</li>
+		<li>an out-of-date link</li>
+		<li>recent changes to static pages</li>
+	</ul>
+	<p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
+  </div>
+</section>
