Show only necessary sections for now

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ slug: homepage
 {% include features.html %}
 {% endcomment %}
 
+{% include hero.html %}
 {% include intro.html %}
 {% include swag.html %}
 {% include portfolio.html %}
-{% include cta.html %}
-{% include posts.html %}
 
 {% comment %}
+{% include cta.html %}
+{% include posts.html %}
 {% include team.html %}
 {% include subscribe.html %}
 {% endcomment %}
 
-{% include contact.html %}
