Add recent projects
Add recent projects to homepage and rename from portfolio to projects

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ slug: homepage
 {% include hero.html %}
 {% include intro.html %}
 {% include swag.html %}
-{% include portfolio.html %}
-
-{% comment %}
+{% include projects.html %}
 {% include cta.html %}
 {% include posts.html %}
+
+{% comment %}
 {% include team.html %}
 {% include subscribe.html %}
 {% endcomment %}
