Fix page layouts
Use some bootstrap components to style pages.
Update layout so there is padding on top and bottom and on the sides
and the links are presented in a clean format

--- a/categories.html
+++ b/categories.html
@@ -5,47 +5,55 @@ header: Posts By Category
 group: navigation
 ---
 
-<section class="wrap">
-  <div class="single-content">
 
-    <ul>
-      {% assign categories_list = site.categories %}
-      {% if categories_list.first[0] == null %}
-        {% for category in categories_list %}
-            <li>
-                <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref" data-toggle="tab">
-                  {{ category | capitalize }} <span class="badge pull-right">{{ site.categories[category].size }}</span>
-               </a>
-            </li>
-        {% endfor %}
-      {% else %}
-        {% for category in categories_list %}
-            <li>
-                <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref" data-toggle="tab">
-                    {{ category[0] | capitalize }} <span class="badge pull-right">{{ category[1].size }}</span>
-                </a>
-            </li>
-        {% endfor %}
-      {% endif %}
-      {% assign categories_list = nil %}
-    </ul>
-
-
-    {% for category in site.categories %}
-      <div class="tab-pane" id="{{ category[0] }}-ref">
-        <h2>Posts in {{ category[0] | capitalize }}</h2>
-        <ul class="list-unstyled">
-          {% assign pages_list = category[1] %}
-          {% for node in pages_list %}
-            {% if node.title != null %}
-              {% if group == null or group == node.group %}
-                <li><a href="{{ site.BASE_PATH }}/{{node.url}}">{{node.title}}</a> <span class="text-muted">- {{ node.date | date: "%B %d, %Y" }}</span></li>
-              {% endif %}
-            {% endif %}
-          {% endfor %}
-          {% assign pages_list = nil %}
+<section class="section-padding">
+  <div class="container">
+    <div class="row single-content">
+      <div class="col-md-4 animated fadeInLeft">
+        <ul class="nav nav-tabs-vertical">
+          {% assign categories_list = site.categories %}
+          {% if categories_list.first[0] == null %}
+            {% for category in categories_list %}
+                <li>
+                    <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref" data-toggle="tab">
+                      {{ category | capitalize }} <span class="badge pull-right">{{ site.categories[category].size }}</span>
+                   </a>
+                </li>
+            {% endfor %}
+          {% else %}
+            {% for category in categories_list %}
+                <li>
+                    <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref" data-toggle="tab">
+                        {{ category[0] | capitalize }} <span class="badge pull-right">{{ category[1].size }}</span>
+                    </a>
+                </li>
+            {% endfor %}
+          {% endif %}
+          {% assign categories_list = nil %}
         </ul>
       </div>
-    {% endfor %}
+
+      <div class="col-md-8">
+        {% for category in site.categories %}
+          <div class="panel panel-default" id="{{ category[0] }}-ref">
+            <div class="panel-heading">
+              <h3 class="panel-title">Posts in {{ category[0] | capitalize }}</h3>
+            </div>
+            <div class="panel-body">
+              <ul class="list-unstyled">
+                {% assign pages_list = category[1] %}
+                {% for node in pages_list %}
+                  {% if node.title != null %}
+                    {% if group == null or group == node.group %}
+                      <li style="line-height: 35px;"><a href="{{ site.BASE_PATH }}{{node.url}}">{{node.title}}</a> <span class="text-muted">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                    {% endif %}
+                  {% endif %}
+                {% endfor %}
+                {% assign pages_list = nil %}
+              </ul>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
   </div>
 </section>
