--- a/404.html
+++ b/404.html
@@ -2,16 +2,20 @@
 layout: default
 ---
 
-<section class="wrap">
-  <div class="single-content">
-	<h3>Not Found :(</h3>
-	<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-	<p>It looks like this was the result of either:</p>
-	<ul>
-		<li>a mistyped address</li>
-		<li>an out-of-date link</li>
-		<li>recent changes to static pages</li>
-	</ul>
-	<p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
-  </div>
+<section class="section-padding">
+	<div class="container">
+		<div class="row single-content">
+			<div class="col-md-8 col-md-offset-2 animated fadeInLeft">
+				<h3>Not Found :(</h3>
+				<p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+				<p>It looks like this was the result of either:</p>
+				<ul>
+					<li>a mistyped address</li>
+					<li>an out-of-date link</li>
+					<li>recent changes to static pages</li>
+				</ul>
+				<p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
+			</div>
+		</div>
+	</div>
 </section>
