Only show contact on homepage
Remove contact from default layout. Only place on homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ slug: homepage
 {% include projects.html %}
 {% include cta.html %}
 {% include posts.html %}
+{% include contact.html %}
 
 {% comment %}
 {% include uncss.html %}
