--- a/tags.html
+++ b/tags.html
@@ -9,7 +9,7 @@ group: navigation
 <section class="section-padding">
   <div class="container">
     <div class="row single-content">
-      <div class="col-md-4 animated fadeInLeft">
+      <div class="col-md-4">
         <ul class="nav nav-tabs-vertical">
           {% assign tags_list = site.tags %}
            {% if tags_list.first[0] == null %}
