--- a/categories.html
+++ b/categories.html
@@ -9,7 +9,7 @@ group: navigation
 <section class="section-padding">
   <div class="container">
     <div class="row single-content">
-      <div class="col-md-4 animated fadeInLeft">
+      <div class="col-md-4">
         <ul class="nav nav-tabs-vertical">
           {% assign categories_list = site.categories %}
           {% if categories_list.first[0] == null %}
