Remove bootstrap grid in favor of flexboxgrid

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -6,7 +6,7 @@ permalink: /projects/
 ---
 
 <section class="section-padding">
-  <div class="container">
+  <div class="container-fluid">
     <ul class="projects">
       {% for project in site.projects reversed %}
         <li class="row">
