--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@ group: navigation
 
 
 <section class="section-padding">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row single-content">
       <div class="col-md-4">
         <ul class="nav nav-tabs-vertical">
