--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -36,11 +36,11 @@ permalink: /categories/
 
       <div class="col-md-8">
         {% for category in site.categories %}
-          <div class="panel panel-default" id="{{ category[0] }}-ref">
-            <div class="panel-heading">
-              <h3 class="panel-title">Posts in {{ category[0] | capitalize }}</h3>
+          <div class="card" id="{{ category[0] }}-ref">
+            <div class="card-heading">
+              <h3 class="card-title">Posts in {{ category[0] | capitalize }}</h3>
             </div>
-            <div class="panel-body">
+            <div class="card-body">
               <ul class="list-unstyled">
                 {% assign pages_list = category[1] %}
                 {% for node in pages_list %}
