--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,14 +7,17 @@ permalink: /projects/
 
 <section class="section-padding">
   <div class="container-fluid">
+    <h2 class="heading-underline text-center">Projects</h2>
+
     <ul class="projects">
       {% for project in site.projects reversed %}
-        <li class="row">
-          <p class="col-sm-4">
-            <a href="{{ project.link }}" target="_blank" class="thumbnail">
-              <img src="{{ site.base_url }}assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}" width="720" height="400">
+        <li class="row project">
+          <div class="col-sm-4">
+            <a href="{{ project.link }}" target="_blank">
+              <img src="{{ site.base_url }}assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}" class="img-responsive">
             </a>
-          </p>
+          </div>
+
           <div class="col-sm-8">
             <p><a href="{{ project.link }}" target="_blank">{{ project.title }}</a></p>
             <p>Client: {{ project.client }}</p>
