Clean up footer, headings, and hero bg

--- a/_pages/styleguide.html
+++ b/_pages/styleguide.html
@@ -30,5 +30,21 @@ permalink: /styleguide/
       <button type="button" name="button" class="button-secondary">Secondary Button</button>
       <button type="button" name="button" class="button-ghost">Ghost Button</button>
     </div>
+
+    <div class="">
+      <h3>Lists</h3>
+
+      <ul class="list-unstyled">
+        <li>Unstyled</li>
+        <li>Unstyled</li>
+        <li>Unstyled</li>
+      </ul>
+
+      <ul class="list-inline">
+        <li>Inline</li>
+        <li>Inline</li>
+        <li>Inline</li>
+      </ul>
+    </div>
   </div>
 </section>
