Additional framework cleanup and small bug fixes
Fix to spacing issues in projects
Remove css animations
Move vendor css files to vendor directory

--- a/_pages/styleguide.html
+++ b/_pages/styleguide.html
@@ -46,5 +46,10 @@ permalink: /styleguide/
         <li>Inline</li>
       </ul>
     </div>
+
+    <div class="">
+      <h3>Inline Elements</h3>
+      <p>This text is <mark>marked</mark>.</p>
+    </div>
   </div>
 </section>
